--- a/public/resource/loading.css
+++ b/public/resource/loading.css
@@ -8,11 +8,12 @@
 	align-items: center;
 	width: 100%;
 	height: 100%;
+  background: #18181c;
 }
 
 .loading-svg {
-	width: 128px;
-	height: 128px;
+	width: 300px;
+	height: 130px;
 	color: var(--primary-color);
 }
 
@@ -87,5 +88,5 @@
 .loading-title {
   font-size: 28px;
 	font-weight: 500;
-  color: #646464;
+  color: #d4d4d4;
 }
